--- a/src/main/resources/templates/application.mustache
+++ b/src/main/resources/templates/application.mustache
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-Hello
+Hello, user
+<div>
+    <a href="main.mustache">Link to the main</a>
+</div>
 </body>
 </html>
