--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -8,10 +8,14 @@
 </div>
 <div>
     <h1>Список сообщений:</h1>
+    <form method="post" action="filter">
+        <input type="text" name="filter">
+        <button type="submit">Найти</button>
+    </form>
     {{#messages}}
     <div>
         <b>{{id}}</b>
-        <span>{{message}}</span>
+        <span>{{messages}}</span>
         <i>{{tag}}</i>
     </div>
     {{/messages}}
